# bagtube

./: LICENSE  README.md
bagtube_msgs/: CMakeLists.txt  LICENSE  package.xml
bagtube_msgs/action/: PlayBag.action  RecordBag.action
bagtube_msgs/msg/: BagInfo.msg
bagtube_msgs/srv/: ControlPlayback.srv  EditBag.srv  GetBagList.srv
bagtube_rosbag2_py/: CMakeLists.txt  package.xml
bagtube_rosbag2_py/bagtube_rosbag2_py/: __init__.py
bagtube_rosbag2_py/src/bagtube_rosbag2_py/: _transport.cpp  pybind11.hpp
bagtube_rviz_plugins/: CMakeLists.txt  LICENSE  package.xml  plugins_description.xml
bagtube_rviz_plugins/include/bagtube_rviz_plugins/: bagtube_panel.hpp
bagtube_rviz_plugins/src/: bagtube_panel.cpp
bagtube_server/: package.xml  setup.cfg  setup.py
bagtube_server/bagtube_server/: bagtube_server.py
bagtube_server/launch/: chatter_camera.launch.py
bagtube_server/params/: chatter_camera.yaml
bagtube_server/rviz/: chatter_camera.rviz
