<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bagtube_rosbag2_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matej.vargovcik@gmail.com">Matej Vargovcik</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>rosbag2_compression</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_transport</depend>

  <exec_depend>rpyutils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
